# claudetalktoclaude

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
chronicle/: __init__.py  __main__.py  _entrypoint.py  batch.py  chronicle-daemon.service  claude_cli.py  config.py  daemon.py  doctor.py  extractor.py  filtering.py  hook.py  insight.py  install_hooks.py  locks.py  mode.py  query.py  rewind.py  service.py  storage.py  story.py  summarizer.py
scripts/: wrapper-chronicle-hook.sh  wrapper-chronicle.sh
tests/: conftest.py  test_batch.py  test_daemon.py  test_extractor.py  test_filtering.py  test_fixes.py  test_install_hooks.py  test_query.py  test_rewind.py  test_storage.py  test_summarizer.py
tests/fixtures/: fake_claude.py
tests/functional/: test_cli_e2e.py  test_process_e2e.py
tests/unit/: test_audit_regressions.py  test_batch_config.py  test_batch_process_one.py  test_chronicle_md_regression.py  test_claude_cli.py  test_config.py  test_deferred_batch.py  test_display_name.py  test_doctor.py  test_entrypoint.py  test_extractor.py  test_filtering.py  test_hook.py  test_install_hooks.py  test_locks.py  test_main_cli.py  test_mode.py  test_no_content_loss.py  test_no_limits.py  test_query_sessions.py  test_service.py  test_storage.py  test_storage_fences.py  test_tailer.py  test_uninstall_cli.py  test_uninstall_hooks.py  test_v089_finalize.py  test_v089_regressions.py
