[project]
name = "chronicle"
version = "0.7.1"
description = "Hook-triggered persistent session knowledge tracker for Claude Code"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.scripts]
chronicle = "chronicle.__main__:main"
chronicle-hook = "chronicle.hook:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
